fdo#68211 fdo#72786 Fix for "General input/output error" while opening file

Description: Docx containing floating table with formula was giving
"General input/output error" while opening in LibreOffice. Reason being within xLoader->filter() it was calling
EmbeddedObjectContainer::RemoveEmbeddedObject() with bClose value as sal_True(default value in function declaration)
and hence it was removing embedded object from container and also it was closing it.Fix includes passing this bClose
value as sal_false (which means remove object from container but don't close it.)

verified code changes for various floating table docx and normal docx containing tables and formulas.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7009

(cherry picked from commit bee397a1e35fbc2717c56a8bd4a631ccfc185b6b)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I9c2d3f8c4099f9f753b2a1b027f9072cd4effeb5